# qoi-viewer

./: .gitignore  CMakeLists.txt  LICENSE  main.c  qoi.h  readme.md
